# github-action-poetry-example

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
